@@ -15,8 +15,10 @@ import com.capitalhub.rep.repository.RepProfileRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,31 +29,26 @@ public class JobApplicationService {
     private final RepProfileRepository repProfileRepository;
     private final CompanyRepository companyRepository;
 
-    /**
-     * REP aplica a una oferta.
-     */
+    @Transactional
     public ApplicationResponse applyToOffer(Long repUserId, Long offerId, ApplyRequest req) {
-
         RepProfile rep = repProfileRepository.findByUserId(repUserId)
-                .orElseThrow(() -> new EntityNotFoundException("Perfil REP no encontrado"));
+                .orElseThrow(() -> new EntityNotFoundException("Perfil de REP no encontrado"));
 
         JobOffer offer = jobOfferRepository.findById(offerId)
                 .orElseThrow(() -> new EntityNotFoundException("Oferta no encontrada"));
 
-        // Validaciones
         if (!Boolean.TRUE.equals(offer.getActive()) || offer.getStatus() != JobStatus.ACTIVE) {
-            throw new IllegalArgumentException("Esta oferta no está activa");
+            throw new IllegalArgumentException("Esta oferta ya no está activa.");
         }
-
+        
         if (applicationRepository.existsByRepIdAndJobOfferId(rep.getId(), offer.getId())) {
-            throw new IllegalArgumentException("Ya has aplicado a esta oferta");
+            throw new IllegalStateException("Ya has aplicado a esta oferta anteriormente."); 
         }
 
         if (offer.getApplicantsCount() >= offer.getMaxApplicants()) {
-            throw new IllegalArgumentException("La oferta ya alcanzó el máximo de postulaciones");
+            throw new IllegalStateException("La oferta ha alcanzado el límite de postulantes.");
         }
 
-        // Crear aplicación
         JobApplication application = JobApplication.builder()
                 .rep(rep)
                 .jobOffer(offer)
@@ -61,59 +58,43 @@ public class JobApplicationService {
 
         JobApplication saved = applicationRepository.save(application);
 
-        // Actualizar contador en oferta
         offer.setApplicantsCount(offer.getApplicantsCount() + 1);
         jobOfferRepository.save(offer);
 
         return mapToResponse(saved);
     }
 
-    /**
-     * REP ve sus aplicaciones.
-     */
+    @Transactional(readOnly = true)
     public List<ApplicationResponse> listMyApplications(Long repUserId) {
         RepProfile rep = repProfileRepository.findByUserId(repUserId)
                 .orElseThrow(() -> new EntityNotFoundException("Perfil REP no encontrado"));
 
-        return applicationRepository.findByRepId(rep.getId())
-                .stream()
+        return applicationRepository.findByRepId(rep.getId()).stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    /**
-     * Empresa ve aplicaciones de una oferta suya.
-     */
+    @Transactional(readOnly = true)
     public List<ApplicationResponse> listApplicationsForOffer(Long companyUserId, Long offerId) {
         Company company = companyRepository.findByUserId(companyUserId)
                 .orElseThrow(() -> new EntityNotFoundException("Empresa no encontrada"));
-
         JobOffer offer = jobOfferRepository.findById(offerId)
                 .orElseThrow(() -> new EntityNotFoundException("Oferta no encontrada"));
 
         if (!offer.getCompany().getId().equals(company.getId())) {
-            throw new IllegalArgumentException("No puedes ver aplicaciones de una oferta que no es tuya");
+            throw new IllegalArgumentException("No tienes permiso para ver las aplicaciones de esta oferta.");
         }
-
-        return applicationRepository.findByJobOfferId(offerId)
-                .stream()
+        return applicationRepository.findByJobOfferId(offerId).stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    /**
-     * Empresa cambia estado de aplicación (ENTREVISTA, CONTRATADO, RECHAZADO...).
-     */
-    public ApplicationResponse updateApplicationStatus(
-            Long companyUserId,
-            Long applicationId,
-            ApplicationStatus status,
-            String companyNotes,
-            String interviewUrl
-    ) {
+    @Transactional
+    public ApplicationResponse updateApplicationStatus(Long companyUserId, Long applicationId, 
+                                                       ApplicationStatus status, String companyNotes, 
+                                                       String interviewUrl) {
         Company company = companyRepository.findByUserId(companyUserId)
                 .orElseThrow(() -> new EntityNotFoundException("Empresa no encontrada"));
-
         JobApplication app = applicationRepository.findById(applicationId)
                 .orElseThrow(() -> new EntityNotFoundException("Aplicación no encontrada"));
 
@@ -121,48 +102,34 @@ public class JobApplicationService {
             throw new IllegalArgumentException("No puedes modificar aplicaciones de otra empresa");
         }
 
-        // Lógica de cambio de estado
         switch (status) {
             case INTERVIEW -> app.markInterview(interviewUrl);
             case OFFER_SENT -> app.markOfferSent();
             case HIRED -> app.markHired();
             case REJECTED -> app.markRejected(companyNotes);
             case WITHDRAWN -> app.markWithdrawn();
-            default -> app.setStatus(ApplicationStatus.APPLIED);
+            default -> app.setStatus(status);
         }
+        if (companyNotes != null) app.setCompanyNotes(companyNotes);
 
-        if (companyNotes != null) {
-            app.setCompanyNotes(companyNotes);
-        }
-
-        JobApplication saved = applicationRepository.save(app);
-        return mapToResponse(saved);
+        return mapToResponse(applicationRepository.save(app));
     }
 
-    // Mapper manual (Entity -> DTO)
-    private ApplicationResponse mapToResponse(JobApplication a) {
-        JobOffer o = a.getJobOffer();
-        RepProfile r = a.getRep();
-
+    private ApplicationResponse mapToResponse(JobApplication app) {
         return ApplicationResponse.builder()
-                .id(a.getId())
-                .jobOfferId(o.getId())
-                .jobTitle(o.getTitle())
-                .jobRole(o.getRole().name())
-                .companyId(o.getCompany().getId())
-                .companyName(o.getCompany().getName())
-                .repId(r.getId())
-                .repFullName(r.getFullName())
-                .status(a.getStatus())
-                .repMessage(a.getRepMessage())
-                .companyNotes(a.getCompanyNotes())
-                .interviewUrl(a.getInterviewUrl())
-                .appliedAt(a.getAppliedAt())
-                .interviewAt(a.getInterviewAt())
-                .hiredAt(a.getHiredAt())
-                .rejectedAt(a.getRejectedAt())
-                .createdAt(a.getCreatedAt())
-                .updatedAt(a.getUpdatedAt())
+                .id(app.getId())
+                .jobOfferId(app.getJobOffer().getId())
+                .jobTitle(app.getJobOffer().getTitle())
+                .jobRole(app.getJobOffer().getRole().name())
+                .companyId(app.getJobOffer().getCompany().getId())
+                // CORRECCIÓN AQUÍ: Usamos getName(), no getCompanyName()
+                .companyName(app.getJobOffer().getCompany().getName()) 
+                .status(app.getStatus())
+                .repMessage(app.getRepMessage())
+                .companyNotes(app.getCompanyNotes())
+                .interviewUrl(app.getInterviewUrl())
+                // CORRECCIÓN AQUÍ: Null check para createdAt
+                .applicationDate(app.getCreatedAt() != null ? app.getCreatedAt().toString() : "")
                 .build();
     }
 }
